--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         <h1>Welcome to Longbow Website</h1>
         <p id="message">Click the button to enter the Longbow website</p>
         <button onclick="showMessageData()">Click Me</button>
+        <br>
+        <br>
+        <button onclick="myButton()">Click Here For Helpdesk</button>
     </div> 
   <script>
     function showMessage() {
@@ -46,6 +49,9 @@
     function showMessageData() {
       document.getElementById("message").innerHTML = "Hello! You clicked the button!";
       window.open("https://longbowtechnologies.com", "_blank");
+    }
+    function myButton() {
+      alert("Thanks For using These Websites!! we will connect to you very soon..");
     }
   </script>
 
