--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <script>
     function showMessage() {
       document.getElementById("message").innerHTML = "Hello! You clicked the button!";
-      window.open("https://www.doctutorials.com", "_blank");
+      window.open("http://127.0.0.1:5501/DEMO4.html", "_blank");
     }
 
     function myButton() {
@@ -100,7 +100,6 @@
       window.open("https://apps.apple.com/in/app/doctutorials-neet-pg-ss-fmge/id1475350376", "_blank");
     }
 
-    // Slideshow Script
     let currentSlide = 0;
     const slides = document.getElementById("slides");
     const dots = document.querySelectorAll(".dot");
